k8s/user-service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-service-gateway
spec:
  selector:
    istio: ingressgateway  # Utilisation de l'ingress gateway d'Istio
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
