k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service
spec:
  gateways:
    - user-service-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /users
      route:
        - destination:
            host: user-service.default.svc.cluster.local
            port:
              number: 8082
